k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: job-processor
spec:
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 3000
